objects/MOCK_Score_Reason__c.object
<CustomObject>
    <fields>
        <fullName>Confidence__c</fullName>
        <description>Confidence level for indicator. Range from -3 to 3. Negative numbers represent confidence of a negative insight.</description>
        <inlineHelpText>Confidence level for indicator. Range from -3 to 3. Negative numbers represent confidence of a negative insight.</inlineHelpText>
        <label>Confidence</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Score</label>
        <referenceTo>MOCK_Score__c</referenceTo>
        <relationshipLabel>Score Reasons</relationshipLabel>
        <relationshipName>Score_Reasons</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Score Reason</label>
    <nameField>
        <displayFormat>SR - {0000}</displayFormat>
        <label>Score Reason</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Score Reasons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>